--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.eugene</groupId>
     <artifactId>mall-sale</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>user</module>
+        <module>coupon</module>
     </modules>
 
     <properties>
@@ -18,7 +19,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-        <spring-boot.version>2.7.0</spring-boot.version>
+        <spring-boot.version>2.6.3</spring-boot.version>
+        <spring-cloud.version>2021.0.1</spring-cloud.version>
+        <spring-cloud-alibaba.version>2021.0.1.0</spring-cloud-alibaba.version>
         <java.version>1.8</java.version>
         <guava.version>31.1-jre</guava.version>
         <hutool.version>5.7.22</hutool.version>
@@ -26,13 +29,14 @@
         <orika.version>1.5.4</orika.version>
         <mybatis-plus.version>3.1.0</mybatis-plus.version>
         <dynamic-datasource.version>3.3.1</dynamic-datasource.version>
-        <redisson.version>3.12.5</redisson.version>
+        <redisson.version>3.15.6</redisson.version>
         <transmittable-thread-local.version>2.12.1</transmittable-thread-local.version>
         <log4j.version>2.17.2</log4j.version>
         <knife4j.version>4.0.0</knife4j.version>
         <spring-cloud-commons.version>3.1.1</spring-cloud-commons.version>
         <commons-pools-version>2.11.1</commons-pools-version>
         <sharding-sphere.version>4.1.1</sharding-sphere.version>
+        <nacos-springcloud.version>1.4.1</nacos-springcloud.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -40,6 +44,22 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--Spring Cloud 相关依赖-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--Spring Cloud Alibaba 相关依赖-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
