--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -1,58 +1,13 @@
-server:
-  port: 8080
-  undertow:
-    io-threads: 8
-    worker-threads: 256
-
+# 整合nacos，如果不想用nacos，可以把/nacos目录下的配置文件拷贝到/resources目录下替换使用
 spring:
-  application:
-    name: /user
-  datasource:
-    dynamic:
-      primary: master #设置默认的数据源或者数据源组,默认值即为master
-      strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
-      datasource:
-        master:
-          url: jdbc:mysql://127.0.0.1:3306/mall_user_db?allowMultiQueries=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&rewriteBatchedStatements=true
-          username: root
-          password: root
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          type: com.zaxxer.hikari.HikariDataSource
-          hikari:
-            minimum-idle: 50
-            maximum-pool-size: 200
-            idle-timeout: 10000
-            connection-test-query: select 1
-  redis:
-    host: 127.0.0.1
-    port: 6379
-    database: 1
-  sharding-sphere:
-    props:
-      sql:
-        show: true
-    datasource:
-      # 数据源
-      names: shardingmaster
-      shardingmaster:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        type: com.zaxxer.hikari.HikariDataSource
-        jdbc-url: jdbc:mysql://127.0.0.1:3306/mall_user_db?allowMultiQueries=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&rewriteBatchedStatements=true
-        username: root
-        password: root
-        hikari:
-          minimum-idle: 50
-          maximum-pool-size: 200
-          idle-timeout: 10000
-          connection-test-query: select 1
-    sharding:
-      tables:
-        t_user:
-          actualDataNodes: shardingmaster.t_user$->{0..7}
-          table-strategy:
-            inline:
-              sharding-column: mobile
-              algorithm-expression: t_user$->{mobile % 8}
-
-logging:
-  config: classpath:logback/logback-dev.xml
+  config:
+    import:
+      - optional:nacos:config.yml
+  cloud:
+    nacos:
+      config:
+        server-addr: 127.0.0.1:8848
+        namespace: 2822796f-fbc2-455c-b649-1da4ed87b81d
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: 2822796f-fbc2-455c-b649-1da4ed87b81d
