--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -2,7 +2,8 @@
 spring:
   config:
     import:
-      - optional:nacos:user_config.yml
+      - optional:nacos:gateway_config.yml
+      - optional:nacos:gateway_routes.yml
   cloud:
     nacos:
       config:
@@ -11,3 +12,10 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         namespace: e67a68d9-0db1-4699-8dd2-522e9022ac45
+    gateway:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: e67a68d9-0db1-4699-8dd2-522e9022ac45
+        locator:
+          enabled: true
+
