--- a/user/src/main/nacos/user_config.yml
+++ b/user/src/main/nacos/user_config.yml
@@ -3,7 +3,8 @@ server:
   undertow:
     io-threads: 8
     worker-threads: 256
-
+  servlet:
+    context-path: /user
 spring:
   datasource:
     dynamic:
