--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: user
+    name: mall-user
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
