修改优惠券双写上线迁移方法

--- a/gateway/src/main/nacos/gateway_routes.yml
+++ b/gateway/src/main/nacos/gateway_routes.yml
@@ -5,14 +5,13 @@ spring:
         # 路由的唯一标识，新旧券系统网关切换、路径重写
         - id: coupon_new_route
           # 需要转发的地址, lb表示使用nacos本地的负载均衡策略
-          # uri: http://127.0.0.1:8081
           uri: lb://mall-coupon-new
           # 断言规则 用于路有规则匹配 1
           predicates:
-            - Path= /**
+            - Path= /coupon/couponTemplate/**
           filters:
             # 路径重写
-            - RewritePath= /coupon/(?<segment>.*), /couponNew/${segment}
+            - RewritePath= /coupon/couponTemplate/(?<segment>.*), /couponNew/couponTemplate/${segment}
 
         # 路由的唯一标识
         - id: user_route
